force-app/main/default/objects/Execution_Log__c/Execution_Log__c.object-meta.xml
<CustomObject>
    <label>Execution Log</label>
    <nameField>
        <label>Execution Log Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Execution Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>