force-app/main/default/objects/Execution_Log__c/fields/ARTL_InterfaceType__c.field-meta.xml
<CustomField>
    <fullName>ARTL_InterfaceType__c</fullName>
    <label>Interface type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>