force-app/main/default/objects/Execution_Log__c/fields/ARTL_RequestPayload__c.field-meta.xml
<CustomField>
    <fullName>ARTL_RequestPayload__c</fullName>
    <label>Request Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>