force-app/main/default/objects/Execution_Log__c/fields/ARTL_ResponsePayload__c.field-meta.xml
<CustomField>
    <fullName>ARTL_ResponsePayload__c</fullName>
    <label>Response Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>